# CMakeJourney

./: CMakePresets.json  README.md
largeProject/: CMakeLists.txt  main.cpp
largeProject/include/mediumProject/: point.h
largeProject/src/: CMakeLists.txt  point.cpp
mediumProject/: CMakeLists.txt  main.cpp
mediumProject/include/mediumProject/: point.h
mediumProject/src/: CMakeLists.txt  point.cpp
smallProject/: .gitignore  CMakeLists.txt  main.cpp  point.cpp  point.h
vulkanProject/: CMakeLists.txt  main.cpp
